# pyadventures

./: .gitignore  main.py  pyproject.toml
AsyncIo/: pyproject.toml
AsyncIo/src/asyncio/: __init__.py
Design Patterns/: pyproject.toml
Design Patterns/src/design_patterns/: __init__.py
Functional Programming/: pyproject.toml
Functional Programming/src/functional_programming/: __init__.py
Notebooks/: pyproject.toml
Notebooks/exploratory/: scratchpad.ipynb
OOPS/: pyproject.toml
OOPS/src/oops/: __init__.py
Pydantic/: pyproject.toml
Pydantic/src/pydantic/: __init__.py
