[project]
name = "functional-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Praveen Kumar", email = "praveenk0604@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
functional-programming = "functional_programming:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
