[project]
name = "notebooks"
version = "0.1.0"
description = "Data playground and experimentation workspace"
readme = "README.md"
authors = [
    { name = "Praveen Kumar", email = "praveenk0604@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cowsay>=6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "polars>=1.41.2",
    "requests>=2.34.2",
]

[tool.ruff]
# Extend configuration to explicitly handle notebooks
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E (pycodestyle), F (Pyflakes), I (isort) for clean cells and sorted imports
select = ["E", "F", "I"]

[tool.ruff.format]
docstring-code-format = true
